--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "5.0.5",
     "scripts": {
         "start": "gulp watch",
-        "build": "gulp css && gulp js"
+        "build": "gulp build",
+        "deploy": "gulp deploy"
     },
     "description": "Resume is a simple, yet elegant resume and CV theme for Bootstrap 4.",
     "keywords": [
@@ -15,7 +16,7 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/template-overviews/resume",
+    "homepage": "https://sharondelacuadra.com",
     "bugs": {
         "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
         "email": "feedback@startbootstrap.com"
@@ -41,6 +42,7 @@
         "gulp": "4.0.0",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "4.0.0",
+        "gulp-gh-pages": "^0.5.4",
         "gulp-header": "2.0.7",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
